--- a/force-app/main/default/classes/GoogleMapMultipleObject.cls
+++ b/force-app/main/default/classes/GoogleMapMultipleObject.cls
@@ -14,6 +14,7 @@ public with sharing class GoogleMapMultipleObject {
             acc = Database.query(query);
 		system.debug('acc ==== >>>'+acc);
         system.debug('acc ==== >>>'+acc);
+        system.debug('acc ==== >>>'+acc);
         List<Location> loc = new List<Location>();
         
         System.debug(acc);
