--- a/force-app/main/default/classes/GoogleMapMultipleObject.cls
+++ b/force-app/main/default/classes/GoogleMapMultipleObject.cls
@@ -16,6 +16,7 @@ public with sharing class GoogleMapMultipleObject {
         system.debug('acc ==== >>>'+acc);
         system.debug('acc ==== >>>'+acc);
         system.debug('acc ==== >>>'+acc);
+        system.debug('acc ==== >>>'+acc);
         List<Location> loc = new List<Location>();
         
         System.debug(acc);
